2004-12-13  John Dallaway  <jld@ecoscentric.com>

	* tests/fileio1.c: Rename to jffs2_1.c. eCos test names should be
	unique.
	* tests/fseek1.c: Rename to jffs2_2.c.
	* cdl/jffs2.cdl: Build the renamed tests.

2004-12-10  Per Hedblom  <per.hedblom@abem.se>

	* src/fs-ecos.c: Use filesystem locking not file locking otherwise
	the node cache can be corrupted by multiple operations on
	different files at the same time.

2004-11-11  Andrew Lunn <andrew.lunn@ascom.ch>

	* Merge from public MTD.
	
2004-11-11  Andrew Lunn <andrew.lunn@ascom.ch>

	* src/build.c: Removed Oyvind Harboe's patch from 2004-04-19 
	since it was rejected upstream.
	
2004-10-20  Per Hedblom  <perhedblom@abem.se>

	* src/fs-ecos.c (jffs2_open): Call iput on dir node if
	jffs2_create fails.
	* src/fs-ecos.c (jffs2_umount): use jffs2_free_full_dirent instead
	of free.

2004-10-07  Knud Woehler <knud.woehler@microplex.de>

	* src/fs-ecos.c (find_entry): jffs2_lookup may return error codes.
	Check added.

2004-09-16  Dirk Eibach  <eibach@gdsys.de>
2004-09-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/jffs2.cdl: Fixed outdated definitions for compression options.
	* src/fs-ecos.c: Added missing calls for jffs2_compressors_init()
        and jffs2_compressors_exit() 

2004-08-13  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/compr.h: Committed this file which if forgot yesterday.

2004-08-12  Andrew Lunn <andrew.lunn@ascom.ch>
	    Gary Thomas <gary@mlbassoc.com>

	* Merge from public MTD.
	
2004-04-19  Oyvind Harboe <oyvind.harboe@zylin.com>
	
	* src/build.c: JFFS2 can now be used as a write-once, read many mode
	for really small flash disks, e.g. configuration parameters.
	
2004-04-21  Gary Thomas  <gary@mlbassoc.com>

	* src/fs-ecos.c: Merge from public MTD - verify file position
	after each operation (safety check).

2004-04-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fs-ecos.c (jffs2_extend_file): Fix creation of hole inode's
	* src/fs-ecos.c (jffs2_fo_lseek): Allow seeking past EOF.